# optimize-data-import

./: .gitignore  pyproject.toml
data/: New Microsoft PowerPoint Presentation.pptx
docker/: Dockerfile  docker-compose.yml
docker/script-runner/: Dockerfile  run.sh
sql/: init.sql
src/: data_export_hotels.py  data_export_rooms.py  update_db.py
